dataset1235/2025-2/2947369575/users/3893556986/executions/1003782500_3921830315.log
== SUBMISSION (2025-09-01 22:41:32)
-- CODE: 
quantidade = float (input())

gasolina = 2.86
serviço = 50.00
icms = 34

gasolina_total = quantidade*gasolina
sem_imposto = gasolina_total + serviço
volor_icms = sem_imposto * (cms/100)
total = sem_imposto+valor_(icms)
print (round(total,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    volor_icms = sem_imposto * (cms/100)
                                ^^^
NameError: name 'cms' is not defined. Did you mean: 'icms'?
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    volor_icms = sem_imposto * (cms/100)
                                ^^^
NameError: name 'cms' is not defined. Did you mean: 'icms'?
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    volor_icms = sem_imposto * (cms/100)
                                ^^^
NameError: name 'cms' is not defined. Did you mean: 'icms'?
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    volor_icms = sem_imposto * (cms/100)
                                ^^^
NameError: name 'cms' is not defined. Did you mean: 'icms'?
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    volor_icms = sem_imposto * (cms/100)
                                ^^^
NameError: name 'cms' is not defined. Did you mean: 'icms'?
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    volor_icms = sem_imposto * (cms/100)
                                ^^^
NameError: name 'cms' is not defined. Did you mean: 'icms'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 22:45:28)
-- CODE: 
quantidade = float(input())

gasolina = 2.86
serviço = 50.00
icms = 34

gasolina_total = quantidade*gasolina
sem_imposto = gasolina_total + serviço
volor_icms = sem_imposto * (1cms/100)
total = sem_imposto+valor_icms
print(round(total,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
-- ERROR:
File "XXXX", line 9
    volor_icms = sem_imposto * (1cms/100)
                                ^
SyntaxError: invalid decimal literal
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
-- ERROR:
File "XXXX", line 9
    volor_icms = sem_imposto * (1cms/100)
                                ^
SyntaxError: invalid decimal literal
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
-- ERROR:
File "XXXX", line 9
    volor_icms = sem_imposto * (1cms/100)
                                ^
SyntaxError: invalid decimal literal
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
-- ERROR:
File "XXXX", line 9
    volor_icms = sem_imposto * (1cms/100)
                                ^
SyntaxError: invalid decimal literal
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
-- ERROR:
File "XXXX", line 9
    volor_icms = sem_imposto * (1cms/100)
                                ^
SyntaxError: invalid decimal literal
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
-- ERROR:
File "XXXX", line 9
    volor_icms = sem_imposto * (1cms/100)
                                ^
SyntaxError: invalid decimal literal
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 22:41:55)
-- CODE: 
quantidade = float (input())

gasolina = 2.86
serviço = 50.00
icms = 34

gasolina_total = quantidade*gasolina
sem_imposto = gasolina_total + serviço
volor_icms = sem_imposto * (cms/100)
total = sem_imposto+valor_icms
print(round(total,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    volor_icms = sem_imposto * (cms/100)
                                ^^^
NameError: name 'cms' is not defined. Did you mean: 'icms'?
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    volor_icms = sem_imposto * (cms/100)
                                ^^^
NameError: name 'cms' is not defined. Did you mean: 'icms'?
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    volor_icms = sem_imposto * (cms/100)
                                ^^^
NameError: name 'cms' is not defined. Did you mean: 'icms'?
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    volor_icms = sem_imposto * (cms/100)
                                ^^^
NameError: name 'cms' is not defined. Did you mean: 'icms'?
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    volor_icms = sem_imposto * (cms/100)
                                ^^^
NameError: name 'cms' is not defined. Did you mean: 'icms'?
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    volor_icms = sem_imposto * (cms/100)
                                ^^^
NameError: name 'cms' is not defined. Did you mean: 'icms'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 22:46:01)
-- CODE: 
quantidade = float(input())

gasolina = 2.86
serviço = 50.00
icms = 34

gasolina_total = quantidade*gasolina
sem_imposto = gasolina_total + serviço
valor_icms = sem_imposto * (icms/100)
total = sem_imposto+valor_icms
print(round(total,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
---- user output:
106.86
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
---- user output:
634.85
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
---- user output:
258.62
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
---- user output:
401.95
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
---- user output:
979.99
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
---- user output:
230.57
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 22:45:27)
-- CODE: 
quantidade = float(input())

gasolina = 2.86
serviço = 50.00
icms = 34

gasolina_total = quantidade*gasolina
sem_imposto = gasolina_total + serviço
volor_icms = sem_imposto * (1cms/100)
total = sem_imposto+valor_icms
print(round(total,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
-- ERROR:
File "XXXX", line 9
    volor_icms = sem_imposto * (1cms/100)
                                ^
SyntaxError: invalid decimal literal
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
-- ERROR:
File "XXXX", line 9
    volor_icms = sem_imposto * (1cms/100)
                                ^
SyntaxError: invalid decimal literal
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
-- ERROR:
File "XXXX", line 9
    volor_icms = sem_imposto * (1cms/100)
                                ^
SyntaxError: invalid decimal literal
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
-- ERROR:
File "XXXX", line 9
    volor_icms = sem_imposto * (1cms/100)
                                ^
SyntaxError: invalid decimal literal
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
-- ERROR:
File "XXXX", line 9
    volor_icms = sem_imposto * (1cms/100)
                                ^
SyntaxError: invalid decimal literal
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
-- ERROR:
File "XXXX", line 9
    volor_icms = sem_imposto * (1cms/100)
                                ^
SyntaxError: invalid decimal literal
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 22:40:50)
-- CODE: 
quantidade = float (input())

gasolina = 2.86
serviço = 50.00
icms = 34

gasolina_total = quantidade*gasolina
sem_imposto = gasolina_total + serviço
volor_icms = sem_imposto * (cms/100)
total = sem_imposto+valor_icms
print (round(total,2)))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
-- ERROR:
File "XXXX", line 11
    print (round(total,2)))
                          ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
-- ERROR:
File "XXXX", line 11
    print (round(total,2)))
                          ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
-- ERROR:
File "XXXX", line 11
    print (round(total,2)))
                          ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
-- ERROR:
File "XXXX", line 11
    print (round(total,2)))
                          ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
-- ERROR:
File "XXXX", line 11
    print (round(total,2)))
                          ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
-- ERROR:
File "XXXX", line 11
    print (round(total,2)))
                          ^
SyntaxError: unmatched ')'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 22:39:11)
-- CODE: 
quantidade = float (input())

gasolina = 2.86
serviço = 50.00
icms = 34

gasolina_total = quantidade*gasolina
sem_imposto = gasolina_total + serviço
volor_icms = sem_imposto * (icms/100)
total = sem_imposto+valor_icms
print (round(total,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    total = sem_imposto+valor_icms
                        ^^^^^^^^^^
NameError: name 'valor_icms' is not defined. Did you mean: 'volor_icms'?
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    total = sem_imposto+valor_icms
                        ^^^^^^^^^^
NameError: name 'valor_icms' is not defined. Did you mean: 'volor_icms'?
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    total = sem_imposto+valor_icms
                        ^^^^^^^^^^
NameError: name 'valor_icms' is not defined. Did you mean: 'volor_icms'?
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    total = sem_imposto+valor_icms
                        ^^^^^^^^^^
NameError: name 'valor_icms' is not defined. Did you mean: 'volor_icms'?
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    total = sem_imposto+valor_icms
                        ^^^^^^^^^^
NameError: name 'valor_icms' is not defined. Did you mean: 'volor_icms'?
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    total = sem_imposto+valor_icms
                        ^^^^^^^^^^
NameError: name 'valor_icms' is not defined. Did you mean: 'volor_icms'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 22:43:15)
-- CODE: 
quantidade = float (input())

gasolina = 2.86
serviço = 50.00
icms = 34

gasolina_total = quantidade*gasolina
sem_imposto = gasolina_total + serviço
volor_icms = sem_imposto * (icms/100)
total = sem_imposto+valor_icms
print(round(total,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    total = sem_imposto+valor_icms
                        ^^^^^^^^^^
NameError: name 'valor_icms' is not defined. Did you mean: 'volor_icms'?
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    total = sem_imposto+valor_icms
                        ^^^^^^^^^^
NameError: name 'valor_icms' is not defined. Did you mean: 'volor_icms'?
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    total = sem_imposto+valor_icms
                        ^^^^^^^^^^
NameError: name 'valor_icms' is not defined. Did you mean: 'volor_icms'?
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    total = sem_imposto+valor_icms
                        ^^^^^^^^^^
NameError: name 'valor_icms' is not defined. Did you mean: 'volor_icms'?
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    total = sem_imposto+valor_icms
                        ^^^^^^^^^^
NameError: name 'valor_icms' is not defined. Did you mean: 'volor_icms'?
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    total = sem_imposto+valor_icms
                        ^^^^^^^^^^
NameError: name 'valor_icms' is not defined. Did you mean: 'volor_icms'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 22:43:14)
-- CODE: 
quantidade = float (input())

gasolina = 2.86
serviço = 50.00
icms = 34

gasolina_total = quantidade*gasolina
sem_imposto = gasolina_total + serviço
volor_icms = sem_imposto * (icms/100)
total = sem_imposto+valor_icms
print(round(total,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    total = sem_imposto+valor_icms
                        ^^^^^^^^^^
NameError: name 'valor_icms' is not defined. Did you mean: 'volor_icms'?
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    total = sem_imposto+valor_icms
                        ^^^^^^^^^^
NameError: name 'valor_icms' is not defined. Did you mean: 'volor_icms'?
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    total = sem_imposto+valor_icms
                        ^^^^^^^^^^
NameError: name 'valor_icms' is not defined. Did you mean: 'volor_icms'?
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    total = sem_imposto+valor_icms
                        ^^^^^^^^^^
NameError: name 'valor_icms' is not defined. Did you mean: 'volor_icms'?
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    total = sem_imposto+valor_icms
                        ^^^^^^^^^^
NameError: name 'valor_icms' is not defined. Did you mean: 'volor_icms'?
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    total = sem_imposto+valor_icms
                        ^^^^^^^^^^
NameError: name 'valor_icms' is not defined. Did you mean: 'volor_icms'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 22:44:01)
-- CODE: 
quantidade = float(input())

gasolina = 2.86
serviço = 50.00
icms = 34

gasolina_total = quantidade*gasolina
sem_imposto = gasolina_total + serviço
volor_icms = sem_imposto * (icms/100)
total = sem_imposto+valor_icms
print(round(total,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    total = sem_imposto+valor_icms
                        ^^^^^^^^^^
NameError: name 'valor_icms' is not defined. Did you mean: 'volor_icms'?
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    total = sem_imposto+valor_icms
                        ^^^^^^^^^^
NameError: name 'valor_icms' is not defined. Did you mean: 'volor_icms'?
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    total = sem_imposto+valor_icms
                        ^^^^^^^^^^
NameError: name 'valor_icms' is not defined. Did you mean: 'volor_icms'?
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    total = sem_imposto+valor_icms
                        ^^^^^^^^^^
NameError: name 'valor_icms' is not defined. Did you mean: 'volor_icms'?
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    total = sem_imposto+valor_icms
                        ^^^^^^^^^^
NameError: name 'valor_icms' is not defined. Did you mean: 'volor_icms'?
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    total = sem_imposto+valor_icms
                        ^^^^^^^^^^
NameError: name 'valor_icms' is not defined. Did you mean: 'volor_icms'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 22:41:43)
-- CODE: 
quantidade = float (input())

gasolina = 2.86
serviço = 50.00
icms = 34

gasolina_total = quantidade*gasolina
sem_imposto = gasolina_total + serviço
volor_icms = sem_imposto * (cms/100)
total = sem_imposto+valor_icms
print (round(total,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    volor_icms = sem_imposto * (cms/100)
                                ^^^
NameError: name 'cms' is not defined. Did you mean: 'icms'?
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    volor_icms = sem_imposto * (cms/100)
                                ^^^
NameError: name 'cms' is not defined. Did you mean: 'icms'?
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    volor_icms = sem_imposto * (cms/100)
                                ^^^
NameError: name 'cms' is not defined. Did you mean: 'icms'?
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    volor_icms = sem_imposto * (cms/100)
                                ^^^
NameError: name 'cms' is not defined. Did you mean: 'icms'?
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    volor_icms = sem_imposto * (cms/100)
                                ^^^
NameError: name 'cms' is not defined. Did you mean: 'icms'?
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    volor_icms = sem_imposto * (cms/100)
                                ^^^
NameError: name 'cms' is not defined. Did you mean: 'icms'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 22:41:54)
-- CODE: 
quantidade = float (input())

gasolina = 2.86
serviço = 50.00
icms = 34

gasolina_total = quantidade*gasolina
sem_imposto = gasolina_total + serviço
volor_icms = sem_imposto * (cms/100)
total = sem_imposto+valor_icms
print(round(total,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    volor_icms = sem_imposto * (cms/100)
                                ^^^
NameError: name 'cms' is not defined. Did you mean: 'icms'?
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    volor_icms = sem_imposto * (cms/100)
                                ^^^
NameError: name 'cms' is not defined. Did you mean: 'icms'?
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    volor_icms = sem_imposto * (cms/100)
                                ^^^
NameError: name 'cms' is not defined. Did you mean: 'icms'?
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    volor_icms = sem_imposto * (cms/100)
                                ^^^
NameError: name 'cms' is not defined. Did you mean: 'icms'?
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    volor_icms = sem_imposto * (cms/100)
                                ^^^
NameError: name 'cms' is not defined. Did you mean: 'icms'?
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    volor_icms = sem_imposto * (cms/100)
                                ^^^
NameError: name 'cms' is not defined. Did you mean: 'icms'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 22:44:02)
-- CODE: 
quantidade = float(input())

gasolina = 2.86
serviço = 50.00
icms = 34

gasolina_total = quantidade*gasolina
sem_imposto = gasolina_total + serviço
volor_icms = sem_imposto * (icms/100)
total = sem_imposto+valor_icms
print(round(total,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    total = sem_imposto+valor_icms
                        ^^^^^^^^^^
NameError: name 'valor_icms' is not defined. Did you mean: 'volor_icms'?
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    total = sem_imposto+valor_icms
                        ^^^^^^^^^^
NameError: name 'valor_icms' is not defined. Did you mean: 'volor_icms'?
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    total = sem_imposto+valor_icms
                        ^^^^^^^^^^
NameError: name 'valor_icms' is not defined. Did you mean: 'volor_icms'?
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    total = sem_imposto+valor_icms
                        ^^^^^^^^^^
NameError: name 'valor_icms' is not defined. Did you mean: 'volor_icms'?
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    total = sem_imposto+valor_icms
                        ^^^^^^^^^^
NameError: name 'valor_icms' is not defined. Did you mean: 'volor_icms'?
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    total = sem_imposto+valor_icms
                        ^^^^^^^^^^
NameError: name 'valor_icms' is not defined. Did you mean: 'volor_icms'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 22:41:42)
-- CODE: 
quantidade = float (input())

gasolina = 2.86
serviço = 50.00
icms = 34

gasolina_total = quantidade*gasolina
sem_imposto = gasolina_total + serviço
volor_icms = sem_imposto * (cms/100)
total = sem_imposto+valor_icms
print (round(total,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    volor_icms = sem_imposto * (cms/100)
                                ^^^
NameError: name 'cms' is not defined. Did you mean: 'icms'?
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    volor_icms = sem_imposto * (cms/100)
                                ^^^
NameError: name 'cms' is not defined. Did you mean: 'icms'?
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    volor_icms = sem_imposto * (cms/100)
                                ^^^
NameError: name 'cms' is not defined. Did you mean: 'icms'?
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    volor_icms = sem_imposto * (cms/100)
                                ^^^
NameError: name 'cms' is not defined. Did you mean: 'icms'?
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    volor_icms = sem_imposto * (cms/100)
                                ^^^
NameError: name 'cms' is not defined. Did you mean: 'icms'?
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    volor_icms = sem_imposto * (cms/100)
                                ^^^
NameError: name 'cms' is not defined. Did you mean: 'icms'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 22:43:18)
-- CODE: 
quantidade = float (input())

gasolina = 2.86
serviço = 50.00
icms = 34

gasolina_total = quantidade*gasolina
sem_imposto = gasolina_total + serviço
volor_icms = sem_imposto * (icms/100)
total = sem_imposto+valor_icms
print(round(total,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    total = sem_imposto+valor_icms
                        ^^^^^^^^^^
NameError: name 'valor_icms' is not defined. Did you mean: 'volor_icms'?
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    total = sem_imposto+valor_icms
                        ^^^^^^^^^^
NameError: name 'valor_icms' is not defined. Did you mean: 'volor_icms'?
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    total = sem_imposto+valor_icms
                        ^^^^^^^^^^
NameError: name 'valor_icms' is not defined. Did you mean: 'volor_icms'?
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    total = sem_imposto+valor_icms
                        ^^^^^^^^^^
NameError: name 'valor_icms' is not defined. Did you mean: 'volor_icms'?
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    total = sem_imposto+valor_icms
                        ^^^^^^^^^^
NameError: name 'valor_icms' is not defined. Did you mean: 'volor_icms'?
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    total = sem_imposto+valor_icms
                        ^^^^^^^^^^
NameError: name 'valor_icms' is not defined. Did you mean: 'volor_icms'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
